--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap');
 
 body {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -11,16 +12,36 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #111;
+  overflow: hidden;
 }
 
 header {
+  position: relative;
   flex-shrink: 0;
+  z-index: 300;
 }
 
 main {
+  position: relative;
   flex-grow: 1;
+  padding-block: 20px;
+  overflow-y: auto;
+  z-index: 200;
+}
+
+footer {
+  position: relative;
+  flex-shrink: 0;
+  z-index: 100;
 }
 
 .container {
   padding-inline: 24px;
+}
+
+.card {
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid rgba(67, 0, 176, 0.25);
+  border-radius: 16px;
 }
