--- a/src/app.css
+++ b/src/app.css
@@ -24,9 +24,12 @@ header {
 main {
   position: relative;
   flex-grow: 1;
-  padding-block: 20px;
   overflow-y: auto;
   z-index: 200;
+}
+
+section {
+  padding-block: 20px;
 }
 
 footer {
